--- a/style.css
+++ b/style.css
@@ -1,36 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-}
-
 body {
-    background-color: #FFEEDF;
-}
-
-button {
-    background-color: #1C5A4E;
-    width: 240px;
-    height: 240px;
-    border-radius: 120px; /* making radius out of elements corners */
-    color: #FFEEDF;
-    font-size: 200px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    position: absolute; /* taking th element out of the rendering flow */
-    top: 50%; /* placing the element that much away from the top edge of the viewport */
-    left: 50%;
-
-    transform: translate(-50%, -50%); /* Visszabb igazitottuk hogy kozepen legyen */
-    /* moves away the element that much from themself */
-    /* Mivel nem irtunk mas positiont, ezert most a viewporthoz nezi */
-
-}
-
-span {
-    position: absolute;
-    top: -12px;
-    left: 50%;
-
-    transform: translateX(-50%);
+    background-color: aquamarine;
 }
